--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="Style.css">
+        <meta charset="utf-8">
     <title>Mijn website</title>
   </head>
   <body>
-  	<h1><p style="color: darkblue"><code>Nathan Bonsu</code></h1>
+  	<h1><p><code>Nathan Bonsu</code></h1>
    <h2>Mijn hobbies</h2>
    <ul>
       <li><a href="https://nl.wikipedia.org/wiki/Computerspel"> Gamen</a></li>
